Fixed: --- changed background-color in app.scss to fix the green nav-bar on Ios devices --- reinstalled screen-orientation module to fix Ios orientation issues

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,5 +17,5 @@
 .header {
      -webkit-flex: 1.5 !important;
      -webkit-align-items: center;
-     background-color: #3EEC90;;
+     background-color: map-get($colors, slidleGrayBackground);
 }
