--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,6 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  slidlegreen: #3EEC90,
   slidleOrange: #f1911f,
   slidleRed: #e64f29,
   slidleGrayBackground: #eaeaea,
